--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,14 @@
-@import "./scss/variables";
-@import "./scss/globals";
-@import "./scss/mixins";
+@import "./css/variables";
+@import "./css/globals";
+@import "./css/mixins";
 
 
 
-@import "./scss/header";
-@import "./scss/play";
-@import "./scss/game";
-@import "./scss/footer";
-@import "./scss/modal";
+@import "./css/header";
+@import "./css/play";
+@import "./css/game";
+@import "./css/footer";
+@import "./css/modal";
 
 
 
